src/test/ui/async-await/issue-75785-confusing-named-region.stderr
error[E0506]: cannot assign to `*x` because it is borrowed
  --> $DIR/issue-75785-confusing-named-region.rs:9:5
   |
LL |     let y = &*x;
   |             --- borrow of `*x` occurs here
LL |     *x += 1;
   |     ^^^^^^^ assignment to borrowed `*x` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
